--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>My blog</title>
   <body>
     <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
+    <p> This is the beginning of my website home page..ß</p>
     <p> It will eventually contain a list of links to all my blogs. </p>
   </body>
 </html>
