added classes,button,link & image

--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <html>
   <head>
+    <link rel="stylesheet" href="/styles/main.css" />
+
+    <!-- tab title -->
     <title>My blog</title>
-  <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page..ß</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
-  </body>
+  </head>
+
+  <div class="body">
+    <div class="menu">
+      <a class="button" href="index.html">Home</a>
+      <a class="button" href="/about/about.html">About</a>
+      <a class="button" href="/blog">Blog</a>
+    </div>
+
+    <header>
+      <img class="logo" alt="Cat girl with cat" src="/img/catgirl.png" />
+    </header>
+
+    <h1 class="title">Kia ora! (Hello World!)</h1>
+    <p>This is the beginning of my website home page.</p>
+
+    <div class="linkstoblog">
+      <strong>Links to all my blogs:</strong>
+      <br />
+      <br />
+
+      <a href="/blog/te-houtaewa-template.html">Te Houtaewa </a>
+    </div>
+  </div>
 </html>
+
+<!-- link te-houtaewa-template.html -->
