--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="styles/main.css" />
 
     <!-- tab title -->
     <title>My blog</title>
@@ -9,23 +9,23 @@
   <div class="body">
     <div class="menu">
       <a class="button" href="index.html">Home</a>
-      <a class="button" href="/about/about.html">About</a>
-      <a class="button" href="/blog">Blog</a>
+      <a class="button" href="about/about.html">About</a>
+      <a class="button" href="blog">Blog</a>
     </div>
 
     <header>
-      <img class="logo" alt="Cat girl with cat" src="/img/catgirl.png" />
+      <img class="logo" alt="Cat girl with cat" src="img/catgirl.png" />
     </header>
 
     <h1 class="title">Kia ora! (Hello World!)</h1>
     <p>This is the beginning of my website home page.</p>
 
-    <div class="linkstoblog">
+    <div class="links-to-blog">
       <strong>Links to all my blogs:</strong>
       <br />
       <br />
 
-      <a href="/blog/te-houtaewa-template.html">Te Houtaewa </a>
+      <a href="blog/te-houtaewa-template.html">Te Houtaewa </a>
     </div>
   </div>
 </html>
