--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
     <h1 class="title">Kia ora! (Hello World!)</h1>
     <p>This is the beginning of my website home page.</p>
 
-    <div class="links-to-blog">
-      <strong>Links to all my blogs:</strong>
-      <br />
-      <br />
+    <main>
+      <div class="links-to-blog">
+        <strong>Links to all my blogs:</strong>
+        <br />
+        <br />
 
-      <a href="blog/te-houtaewa-template.html">Te Houtaewa </a>
-    </div>
+        <a href="blog/te-houtaewa-template.html">Te Houtaewa </a>
+        <br />
+        <a href="blog/html-css.html">Technical Blog - CSS Concepts</a>
+      </div>
+    </main>
   </div>
 </html>
-
-<!-- link te-houtaewa-template.html -->
