updated blog links

--- a/index.html
+++ b/index.html
@@ -25,10 +25,20 @@
         <strong>Links to all my blogs:</strong>
         <br />
         <br />
-
         <a href="blog/te-houtaewa-template.html">Te Houtaewa </a>
         <br />
+        <br />
+
         <a href="blog/html-css.html">Technical Blog - CSS Concepts</a>
+        <br />
+        <br />
+        <a href="blog/identity-values.html"
+          >Identity, Values and Strengths Exploration</a
+        >
+        <br />
+        <br />
+        <a href="blog/learning-plan.html"> Learning Plan</a>
+        <br />
       </div>
     </main>
   </div>
