Add Blog Index and update all links

--- a/about/about.html
+++ b/about/about.html
@@ -3,14 +3,14 @@
     <link rel="stylesheet" href="../styles/main.css" />
 
     <!-- tab title -->
-    <title>Learning Plan</title>
+    <title>About Me</title>
   </head>
 
   <div class="body">
     <div class="menu">
       <a class="button" href="../index.html">Home</a>
       <a class="button" href="../about/about.html">About</a>
-      <a class="button" href="../blog">Blog</a>
+      <a class="button" href="../blog/blog.html">Blog</a>
     </div>
 
     <header>
