--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="menu">
       <a class="button" href="index.html">Home</a>
       <a class="button" href="about/about.html">About</a>
-      <a class="button" href="blog">Blog</a>
+      <a class="button" href="blog/blog.html">Blog</a>
     </div>
 
     <header>
