Add files for sprint3-updating links & spellcheck

--- a/about/about.html
+++ b/about/about.html
@@ -50,7 +50,7 @@
         <br /><br />
         Over the course of my career journey, I've also worn the hats of a
         barista and a bartender, embracing opportunities for growth and
-        evolution. With my varied interests, including watching a* NFT computer
+        evolution. With my varied interests, including watching a NFT computer
         game come to life as a community manager just for fun, I honestly feel
         like I am all over the place... but I truly believe I'm in the right
         place that I need to be right now.
