--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
         >
         <br />
         <br />
-        <a href="blog/learning-plan.html"> Learning Plan</a>
+        <a href="blog/learning-plan.html">Learning Plan</a>
+        <br />
+        <br />
+        <a href="blog/emotional-intelligence.html"> Emotional Intelligence</a>
+        <br />
+        <br />
+        <a href="/blog/javascript-dom.html">Javascript DOM</a>
+        <br />
         <br />
       </div>
     </main>
