--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="blog/emotional-intelligence.html"> Emotional Intelligence</a>
         <br />
         <br />
-        <a href="/blog/javascript-dom.html">Javascript DOM</a>
+        <a href="blog/javascript-dom.html">JS Fundamentals</a>
         <br />
         <br />
       </div>
