Adding image to index, adjusting css media

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         <br />
         <br />
       </div>
+      <img
+        class="shinji-img"
+        alt="boy sitting on chair"
+        src="/img/just-get-in-the-robot.png"
+      />
     </main>
   </div>
 </html>
