Cultural Blog Completed - Mindset

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <a href="blog/javascript-dom.html">JS Fundamentals</a>
         <br />
         <br />
+        <a href="blog/neuroplasticity.html">Mindset</a>
+        <br />
+        <br />
       </div>
       <img
         class="shinji-img"
