Cultural Blog Completed - Introducing Te Whare Tapa Whā

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <a href="blog/neuroplasticity.html">Mindset</a>
         <br />
         <br />
+        <a href="blog/te-whare-tapa-wha.html">Te Whare Tapa Whā</a>
+        <br />
+        <br />
       </div>
       <img
         class="shinji-img"
