Problem-solving.html completed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         <a href="blog/te-houtaewa-template.html">Te Houtaewa </a>
         <br />
         <br />
-
         <a href="blog/html-css.html">Technical Blog - CSS Concepts</a>
         <br />
         <br />
@@ -50,6 +49,9 @@
         <br />
         <br />
         <a href="blog/te-whare-tapa-wha.html">Te Whare Tapa Whā</a>
+        <br />
+        <br />
+        <a href="blog/problem-solving.html">Problem Solving</a>
         <br />
         <br />
       </div>
