Update Learning Plan

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <a href="blog/problem-solving.html">Problem Solving</a>
         <br />
         <br />
+        <a href="/blog/foundations-reflection.html">Core Reflection</a>
+        <br />
+        <br />
       </div>
       <img
         class="shinji-img"
